Further on #2, removed marquee behavior

--- a/css/marquee.css
+++ b/css/marquee.css
@@ -1,4 +1,5 @@
-/* Remove this files if and when possible */
+/* FIXED Remove this file if and when possible */
+/* This file is no more in use and can be safely removed */
 
 .marquee {
     /*width: 3200px;*/
