--- a/css/main.css
+++ b/css/main.css
@@ -308,3 +308,18 @@ a.accordion-toggle {
 .accordion-group {
     border: none;
 }
+
+.clients-img-holder {
+    height: 75px;
+    overflow: hidden;
+}
+
+.clients-img-holder img {
+    /*width: 25px;*/
+    height: 45px;
+}
+
+.clients-img-holder img:hover {
+    /*width: 25px;*/
+    height: 75px;
+}
